My own app design now

--- a/index.html
+++ b/index.html
@@ -19,29 +19,46 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: 'unsafe-inline' https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *" />
     -->
 
+    <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.5.min.css" />
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <title>KidGrid</title>
 </head>
 
 <body>
 
-    <div class="app">
-        <br><br>
-        <h1>KidGrid</h1>
-        <br>
-        <div id="deviceready" class="blink">
-            <p class="event listening">Подключение...</p>
-            <p class="event received">Устройство готово!</p>
+    <div  id="loading" role="page">
+        Loading...
+    </div>
+
+
+    <div id="page1" data-role="page">
+        <div data-role="header">
+            <h1>KidGrid</h1>
+        </div>
+        <div data-role="main">
+            <img src="img/logo-lmp-01.png">
+            <button>Онлайн режим</button>
+            <button>Оффлайн режим</button>
+        </div>
+
+        <div data-role="footer">
+            <div data-role="navbar">
+                <ul>
+                    <li><a href="#">One</a></li>
+                    <li><a href="#">Tne</a></li>
+                </ul>
+            </div>
         </div>
     </div>
     
     <!-- Scripts block -->    
+    <script type="text/javascript" src="js/jquery-2.2.4.min.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
-    <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
     <script type="text/javascript">
         app.initialize();
     </script>
+    <script type="text/javascript" src="js/jquery.mobile-1.4.5.min.js"></script>
     <!-- - - -->
 </body>
 
