Try to use sound

--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
                     </div>
                     <div class="ui-block-b" style="padding: 5px 20px;">
                         <div style="margin-bottom: 70px; display: none;" class="show-landscape"></div>
-                        <button class="ui-btn ui-icon-arrow-r ui-btn-icon-top" onclick="javascript: location.href='#page4loading'">Войти</button>
+                        <!-- <button class="ui-btn ui-icon-arrow-r ui-btn-icon-top" onclick="javascript: location.href='#page4loading'">Войти</button> -->
+                        <button class="ui-btn ui-icon-arrow-r ui-btn-icon-top" onclick="javascript: console.log(app.snd1);">Войти</button>
                         <!-- <a href="#page4loading" class="ui-btn ui-icon-arrow-r ui-btn-icon-top">Войти</a> -->
                     </div>
                 </fieldset>
